--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.14",
+    "@mui/base": "^5.0.0-beta.40",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
@@ -14,17 +15,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^16.18.105",
     "@types/react": "^18.3.4",
+    "@types/react-beautiful-dnd": "^11.0.4",
     "@types/react-dom": "^18.3.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
+    "react-beautiful-dnd": "^11.0.4",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.12",
     "typescript": "^4.9.5",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -55,6 +60,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/uniqid": "^5.3.4",
     "eslint-plugin-react": "^7.34.1"
   }
 }
