--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.14.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,10 +21,13 @@
     "@types/react": "^18.3.4",
     "@types/react-beautiful-dnd": "^11.0.4",
     "@types/react-dom": "^18.3.0",
+    "dayjs": "^1.11.13",
+    "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^11.0.4",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
